test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnetdemo-app-deployment
  labels:
    app: dotnetdemo-app
  namespace: esh
spec:
  replicas: 2

  selector:
    matchLabels:
      app: dotnetdemo-app
  template:
    metadata:
      labels:
        app: dotnetdemo-app
    spec:
      containers:
      - name: dotnetdemo-app
        image: eshwar0495/dyfhfj:latest
        ports:
        - containerPort: 9000
