service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dotnetdemo-app
  namespace: esh
spec:
  selector:
    app: dotnetdemo-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
